BuddyPress/bbPress: Update author-role styling to avoid overlap issues.
git-svn-id: https://meta.svn.wordpress.org/sites/trunk@7721 74240141-8908-4e6f-9713-ba540dce6ec7

--- a/buddypress.org/public_html/wp-content/themes/bb-base/style.css
+++ b/buddypress.org/public_html/wp-content/themes/bb-base/style.css
@@ -914,7 +914,8 @@ div.sidebar #bbpress-forums {
 }
 
 #bbpress-forums .bbp-author-role {
-	margin: -20px 12px 10px;
+	margin: 5px;
+	padding: 2px;
 	border: 1px solid #ddd;
 	background-color: #eee;
 }
